--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,11 @@
             "email": "shredder139@gmail.com"
         }
     ],
+    "autoload": {
+      "psr-4": {
+        "App\\": "app",
+      }
+    },
     "require": {
       "nikic/fast-route": "^1.3",
         "php-di/php-di": "^6.3"
