--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
     ],
     "autoload": {
       "psr-4": {
-        "App\\": "app",
+        "App\\": "app"
       }
     },
     "require": {
       "nikic/fast-route": "^1.3",
-        "php-di/php-di": "^6.3"
+        "php-di/php-di": "^6.3",
+        "tightenco/collect": "^8.19"
     },
     "require-dev": {
       "symfony/var-dumper": "^5.2"
