--- a/app/composer.json
+++ b/app/composer.json
@@ -14,7 +14,8 @@
     "require": {
       "nikic/fast-route": "^1.3",
         "php-di/php-di": "^6.3",
-        "tightenco/collect": "^8.19"
+        "tightenco/collect": "^8.19",
+        "illuminate/filesystem": "^8.38"
     },
     "require-dev": {
       "symfony/var-dumper": "^5.2"
